<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  
  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>
  
  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>

  <build_depend>diff_drive_controller</build_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <build_depend>joint_state_broadcaster</build_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>

  <build_depend>ros2_control_hardware</build_depend>
  <exec_depend>ros2_control_hardware</exec_depend>

  <build_depend>ros2_control_test_assets</build_depend>
  <exec_depend>ros2_control_test_assets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
